# Rbpo_pz_6sem

./: .gitignore  CMakeLists.txt  Rbpo_pz_6sem.slnx  delete
.github/workflows/: build.yml
Rbpo_pz_6sem/: AvEngine.h  Rbpo_pz_6sem.cpp  Rbpo_pz_6sem.h  Rbpo_pz_6sem.rc  Rbpo_pz_6sem.vcxproj  Rbpo_pz_6sem.vcxproj.filters  Resource.h
Rbpo_pz_6sem/common/: AppConfig.h  AvBinaryFormat.h  AvDatabaseManager.h  AvSignature.h
Rbpo_pz_6sem/data/: default.avdb  public_cert.pem
Rbpo_pz_6sem/rpc/: ServiceControl.h  ServiceControl.idl  ServiceControl_c_arm64.c  ServiceControl_c_win32.c  ServiceControl_c_x64.c  ServiceControl_s_arm64.c  ServiceControl_s_win32.c  ServiceControl_s_x64.c  regenerate_stubs.bat
Rbpo_pz_6sem/service/: RbpoPzService.cpp
tools/: generate_default_avdb.py
tools/installer/: README.md  bundle.wxs  product.wxs
